# cppPractice

./: .gitignore  CMakeLists.txt  README.md  Student.cpp  Student.hpp  calc.cpp  calc.hpp  exampleClass.cpp  exampleClass.hpp  main.cpp
Strategy_Pattern_Example/: Batta.cpp  Batta.hpp
eventManager/: Event.hpp  EventManager.cpp  EventManager.hpp  EventSubscriber.hpp  MntModeEvent.hpp  StopBtnEvent.hpp
tcp-server/: CMakeLists.txt  tcp_server.cpp
test/: CMakeLists.txt  calcTest.cpp  exampleClassTest.cpp  mainTest.cpp
test/mocks/: examleClass.hpp
test/strategy/: strategyTest.cpp
